[package]
authors = ["Axel Kappel"]
edition = "2024"
name = "ferrite"
version = "0.1.0"

[workspace.dependencies]
ahash = { version = "0.8.12", default-features = false }
anyhow = "1.0.68"
arboard = { version = "3.2.0", default-features = false }
argh = "0.1.13"
bitflags = "2.9.1"
boxcar = "0.2.5"
bumpalo = { version = "3.17.0" }
bytemuck = "1.20.0"
cb = { package = "crossbeam-channel", version = "0.5.15" }
cgmath = "0.18.0"
chardetng = "0.1.17"
content_inspector = "0.2.4"
cosmic-text = "0.14.0"
crossterm = "0.28.0"
detect-indent = "0.1.0"
directories = "5.0.0"
dunce = "1.0.4"
encoding_rs = "0.8.31"
executable-finder = "0.3.0"
ferrite-blame = { path = "crates/ferrite-blame" }
ferrite-cli = { path = "crates/ferrite-cli" }
ferrite-core = { path = "crates/ferrite-core" }
ferrite-ctx = { path = "crates/ferrite-ctx" }
ferrite-geom = { path = "crates/ferrite-geom" }
ferrite-runtime = { path = "crates/ferrite-runtime" }
ferrite-style = { path = "crates/ferrite-style" }
ferrite-talloc = { path = "crates/ferrite-talloc" }
ferrite-term-platform = { path = "crates/ferrite-term-platform" }
ferrite-tree-sitter = { path = "crates/ferrite-tree-sitter" }
ferrite-utility = { path = "crates/ferrite-utility" }
ferrite-winit-wgpu-platform = { path = "crates/ferrite-winit-wgpu-platform" }
glyphon = "0.9.0"
grep-matcher = "0.1.7"
grep-regex = "0.1.13"
grep-searcher = "0.1.14"
heck = "0.5.0"
humansize = "2.1.3"
humantime = "2.3.0"
icu_collator = "2.1.1"
ignore = "0.4.20"
indexmap = "2.7.0"
linkify = "0.10.0"
memchr = "2.5.0"
notify-debouncer-full = "0.4.0"
num-traits = "0.2.15"
opener = "0.7.0"
pollster = "0.3.0"
profiling = { version = "1.0.16", features = ["profile-with-puffin"] }
puffin = "0.19.1"
puffin_http = "0.16.0"
rand = "0.8.5"
rayon = "1.7.0"
regex = "1.11.1"
ropey = "1.5.1"
rustix = "0.38.34"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.115"
sha2 = "0.10.9"
slotmap = "1.0.7"
sublime_fuzzy = "0.7.0"
subprocess = "0.2.9" # TODO: rm
tempdir = "0.3.7" # TODO: rm
toml = { version = "0.7.1", default-features = false }
tracing = "0.1.40"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.18"
tree-house = "0.3.0"
tree-house-bindings = { version = "0.2.2", features = ["tree-sitter-language"] }
tree-sitter-language = { version = "0.1.0" }
tui = { package = "ratatui", version = "0.30.0", default-features = false }
tui-core = { package = "ratatui-core", version = "0.1.0" }
unicode-general-category = "0.6.0"
unicode-segmentation = "1.10.0"
unicode-width = "0.1.10"
wgpu = { version = "25.0.2" }
winit = { version = "0.30.12", default-features = false, features = ["rwh_06", "wayland", "wayland-dlopen", "x11"] }

[dependencies]
anyhow = { workspace = true }
directories = { workspace = true }
ferrite-cli = { workspace = true }
ferrite-core = { workspace = true }
ferrite-ctx = { workspace = true }
ferrite-runtime = { workspace = true }
ferrite-talloc = { workspace = true, optional = true }
ferrite-term-platform = { workspace = true, optional = true }
ferrite-winit-wgpu-platform = { workspace = true, optional = true }
profiling = { workspace = true }
puffin = { workspace = true }
puffin_http = { workspace = true }
tracing = { workspace = true }
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json"] }

[features]
default = ["tui", "gui"]
tui = ["dep:ferrite-term-platform"]
gui = ["dep:ferrite-winit-wgpu-platform"]
talloc = ["dep:ferrite-talloc", "ferrite-core/talloc"]

[profile.dev.package."*"]
opt-level = 3

[profile.test]
opt-level = 3

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "s"
lto = "thin"

[workspace]
resolver = "2"
members = ["crates/*"]

# This speeds up compile times a bit
[profile.dev.package.rustix]
hint-mostly-unused = true
[profile.dev.package.ash]
hint-mostly-unused = true
[profile.dev.package.x11rb-protocol]
hint-mostly-unused = true

[profile.release.package.rustix]
hint-mostly-unused = true
[profile.release.package.ash]
hint-mostly-unused = true
[profile.release.package.x11rb-protocol]
hint-mostly-unused = true
