[package]
name = "ferrite-tree-sitter"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-sitter-bash = { git = "https://github.com/tree-sitter/tree-sitter-bash", rev = "4488aa41406547e478636a4fcfd24f5bbc3f2f74", optional = true }
tree-sitter-c = { version = "0.20.2", optional = true }
tree-sitter-c-sharp = { git = "https://github.com/tree-sitter/tree-sitter-c-sharp", rev = "5b60f99545fea00a33bbfae5be956f684c4c69e2", optional = true }
tree-sitter-cmake = { version = "0.2.0", optional = true }
tree-sitter-cpp = { git = "https://github.com/tree-sitter/tree-sitter-cpp", rev = "70aed2e9e83eb7320ab7c454d3084300bf587037", optional = true }
tree-sitter-css = { git = "https://github.com/syntacti/tree-sitter-css", rev = "397aa132b9982fcdd2d473ed69343762a557f10a", optional = true }
tree-sitter-glsl = { git = "https://github.com/theHamsta/tree-sitter-glsl", rev = "74329feb2605deccd32b1c644af507daa6fb82f1", optional = true }
tree-sitter-html = { version = "0.19.0", optional = true }
tree-sitter-json = { version = "0.19.0", optional = true }
tree-sitter-md = { git = "https://github.com/MDeiml/tree-sitter-markdown", rev = "272e080bca0efd19a06a7f4252d746417224959e", optional = true }
tree-sitter-python = { version = "0.20.2", optional = true }
tree-sitter-rust = { version = "0.20.3", optional = true }
tree-sitter-toml = { git = "https://github.com/Mathspy/tree-sitter-toml", optional = true }
tree-sitter-xml = { git = "https://github.com/RenjiSann/tree-sitter-xml", rev = "422528a43630db6dcc1e222d1c5ee3babd559473", optional = true }
tree-sitter-yaml = { git = "https://github.com/panekj/tree-sitter-yaml", rev = "80c8d76847f03e772c5c524cf29bafb56858a8d1", optional = true }

[features]
lang-bash = ["dep:tree-sitter-bash"]
lang-c = ["dep:tree-sitter-c"]
lang-c-sharp = ["dep:tree-sitter-c-sharp"]
lang-cmake = ["dep:tree-sitter-cmake"]
lang-cpp = ["dep:tree-sitter-cpp"]
lang-css = ["dep:tree-sitter-css"]
lang-glsl = ["dep:tree-sitter-glsl"]
lang-html = ["dep:tree-sitter-html"]
lang-json = ["dep:tree-sitter-json"]
lang-md = ["dep:tree-sitter-md"]
lang-python = ["dep:tree-sitter-python"]
lang-rust = ["dep:tree-sitter-rust"]
lang-toml = ["dep:tree-sitter-toml"]
lang-xml = ["dep:tree-sitter-xml"]
lang-yaml = ["dep:tree-sitter-yaml"]
