[package]
name = "utility"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.15"
ropey = "1.6.0"
unicode-general-category = "0.6.0"
unicode-segmentation = "1.10.1"
unicode-width = "0.1.10"
