[package]
name = "ferrite-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
arboard = { workspace = true }
bitflags = { workspace = true }
blake3 = { workspace = true }
cb = { workspace = true }
chardetng = { workspace = true }
content_inspector = { workspace = true }
csscolorparser = { workspace = true, features = ["rgb"] }
detect-indent = { workspace = true } 
directories = { workspace = true }
dunce = { workspace = true }
encoding_rs = { workspace = true }
ferrite-cli = { workspace = true }
ferrite-tree-sitter = { workspace = true }
ferrite-utility = { workspace = true }
flume = { workspace = true, default-features = false }
heck = { workspace = true }
humansize = { workspace = true }
ignore = { workspace = true }
include_dir = { workspace = true, optional = true }
lexical-sort = { workspace = true }
memchr = { workspace = true }
notify = { workspace = true }
once_cell = { workspace = true }
opener = { workspace = true }
proximity-sort = { workspace = true }
rayon = { workspace = true }
ropey = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true } 
slab = { workspace = true } 
sublime_fuzzy = { workspace = true } 
subprocess = { workspace = true } 
toml = { workspace = true } 
tracing = { workspace = true } 
trash = { workspace = true } 
tree-sitter = { workspace = true } 
unicode-segmentation = { workspace = true }
unicode-width = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { workspace = true, features = ["fs"] }

[dev-dependencies]
tempdir = { workspace = true }

[features]
embed-themes = ["dep:include_dir"]
lang-bash = ["ferrite-tree-sitter/lang-bash"]
lang-c = ["ferrite-tree-sitter/lang-c"]
lang-c-sharp = ["ferrite-tree-sitter/lang-c-sharp"]
lang-cmake = ["ferrite-tree-sitter/lang-cmake"]
lang-comment = ["ferrite-tree-sitter/lang-comment"]
lang-cpp = ["ferrite-tree-sitter/lang-cpp"]
lang-css = ["ferrite-tree-sitter/lang-css"]
lang-fish = ["ferrite-tree-sitter/lang-fish"]
lang-fortran = ["ferrite-tree-sitter/lang-fortran"]
lang-glsl = ["ferrite-tree-sitter/lang-glsl"]
lang-go = ["ferrite-tree-sitter/lang-go"]
lang-html = ["ferrite-tree-sitter/lang-html"]
lang-hyprlang = ["ferrite-tree-sitter/lang-hyprlang"]
lang-ini = ["ferrite-tree-sitter/lang-ini"]
lang-javascript = ["ferrite-tree-sitter/lang-javascript"]
lang-json = ["ferrite-tree-sitter/lang-json"]
lang-md = ["ferrite-tree-sitter/lang-md"]
lang-python = ["ferrite-tree-sitter/lang-python"]
lang-ron = ["ferrite-tree-sitter/lang-ron"]
lang-rust = ["ferrite-tree-sitter/lang-rust"]
lang-toml = ["ferrite-tree-sitter/lang-toml"]
lang-typescript = ["ferrite-tree-sitter/lang-typescript"]
lang-xml = ["ferrite-tree-sitter/lang-xml"]
lang-yaml = ["ferrite-tree-sitter/lang-yaml"]
lang-zig = ["ferrite-tree-sitter/lang-zig"]

default = [
  "embed-themes",
  "lang-bash",
  "lang-c",
  "lang-c-sharp",
  "lang-cmake",
  "lang-cpp",
  "lang-css",
  "lang-glsl",
  "lang-go",
  "lang-html",
  "lang-hyprlang",
  "lang-ini",
  "lang-json",
  "lang-md",
  "lang-python",
  "lang-rust",
  "lang-toml",
  "lang-typescript",
  "lang-xml",
  "lang-yaml",
  "lang-fish",
  "lang-comment",
  "lang-javascript",
  "lang-ron",
  "lang-fortran",
  "lang-zig",
]
