[package]
name = "ferrite-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
arboard = { workspace = true, features = ["wayland-data-control"] }
bitflags = { workspace = true, features = ["serde"] }
blake3 = { workspace = true }
boxcar = { workspace = true }
cb = { workspace = true }
chardetng = { workspace = true }
content_inspector = { workspace = true }
detect-indent = { workspace = true }
directories = { workspace = true }
dunce = { workspace = true }
encoding_rs = { workspace = true }
executable-finder = { workspace = true }
ferrite-cli = { workspace = true }
ferrite-tree-sitter = { workspace = true }
ferrite-utility = { workspace = true }
grep-matcher = { workspace = true }
grep-regex = { workspace = true }
grep-searcher = { workspace = true }
heck = { workspace = true }
humansize = { workspace = true }
ignore = { workspace = true }
include_dir = { workspace = true, optional = true }
lexical-sort = { workspace = true }
linkify = { workspace = true }
memchr = { workspace = true }
notify-debouncer-full = { workspace = true }
opener = { workspace = true }
profiling = { workspace = true }
rayon = { workspace = true }
ropey = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
slotmap = { workspace = true }
sublime_fuzzy = { workspace = true }
subprocess = { workspace = true }
toml = { workspace = true, features = ["parse", "display"] }
tracing = { workspace = true }
trash = { workspace = true }
tree-sitter = { workspace = true }

[target.'cfg(unix)'.dependencies]
rustix = { workspace = true, features = ["fs"] }

[dev-dependencies]
tempdir = { workspace = true }
rand = { workspace = true }

[features]
embed-themes = ["dep:include_dir"]
lang-bash = ["ferrite-tree-sitter/lang-bash"]
lang-c = ["ferrite-tree-sitter/lang-c"]
lang-c-sharp = ["ferrite-tree-sitter/lang-c-sharp"]
lang-cmake = ["ferrite-tree-sitter/lang-cmake"]
lang-comment = ["ferrite-tree-sitter/lang-comment"]
lang-cpp = ["ferrite-tree-sitter/lang-cpp"]
lang-css = ["ferrite-tree-sitter/lang-css"]
lang-diff = ["ferrite-tree-sitter/lang-diff"]
lang-dockerfile = ["ferrite-tree-sitter/lang-dockerfile"]
lang-fish = ["ferrite-tree-sitter/lang-fish"]
lang-fortran = ["ferrite-tree-sitter/lang-fortran"]
lang-git-commit = ["ferrite-tree-sitter/lang-git-commit"]
lang-git-config = ["ferrite-tree-sitter/lang-git-config"]
lang-glsl = ["ferrite-tree-sitter/lang-glsl"]
lang-go = ["ferrite-tree-sitter/lang-go"]
lang-html = ["ferrite-tree-sitter/lang-html"]
lang-hyprlang = ["ferrite-tree-sitter/lang-hyprlang"]
lang-ini = ["ferrite-tree-sitter/lang-ini"]
lang-javascript = ["ferrite-tree-sitter/lang-javascript"]
lang-json = ["ferrite-tree-sitter/lang-json"]
lang-lua = ["ferrite-tree-sitter/lang-lua"]
lang-md = ["ferrite-tree-sitter/lang-md"]
lang-nu = ["ferrite-tree-sitter/lang-nu"]
lang-protobuf = ["ferrite-tree-sitter/lang-protobuf"]
lang-python = ["ferrite-tree-sitter/lang-python"]
lang-rebase =  ["ferrite-tree-sitter/lang-rebase"]
lang-ron = ["ferrite-tree-sitter/lang-ron"]
lang-rust = ["ferrite-tree-sitter/lang-rust"]
lang-toml = ["ferrite-tree-sitter/lang-toml"]
lang-typescript = ["ferrite-tree-sitter/lang-typescript"]
lang-xml = ["ferrite-tree-sitter/lang-xml"]
lang-yaml = ["ferrite-tree-sitter/lang-yaml"]
lang-zig = ["ferrite-tree-sitter/lang-zig"]

default = [
  "embed-themes",
  "lang-bash",
  "lang-c-sharp",
  "lang-c",
  "lang-cmake",
  "lang-comment",
  "lang-cpp",
  "lang-css",
  "lang-diff",
  "lang-dockerfile",
  "lang-fish",
  "lang-fortran",
  "lang-git-commit",
  "lang-git-config",
  "lang-glsl",
  "lang-go",
  "lang-html",
  "lang-hyprlang",
  "lang-ini",
  "lang-javascript",
  "lang-json",
  "lang-lua",
  "lang-md",
  "lang-nu",
  "lang-protobuf",
  "lang-python",
  "lang-rebase",
  "lang-ron",
  "lang-rust",
  "lang-toml",
  "lang-typescript",
  "lang-xml",
  "lang-yaml",
  "lang-zig",
]
