[package]
name = "ferrite-gui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
bytemuck = "1.20.0"
cgmath = "0.18.0"
cosmic-text = { version = "0.14.0", features = ["monospace_fallback", "shape-run-cache"] }
ferrite-cli = { workspace = true }
ferrite-core = { workspace = true }
ferrite-tui = { workspace = true }
ferrite-utility = { workspace = true }
glyphon = "0.9.0"
pollster = { workspace = true }
profiling = { workspace = true }
ropey = { workspace = true }
tracing = { workspace = true }
tui = { workspace = true, default-features = false }
unicode-width = { workspace = true }
wgpu = { workspace = true, features = ["glsl"] }
winit = { workspace = true, default-features = false, features = ["rwh_06", "wayland", "wayland-dlopen", "x11"] }