[package]
name = "ferrite-runtime-test"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
directories = { workspace = true }
ferrite-cli = { workspace = true }
ferrite-core = { workspace = true }
ferrite-runtime = { workspace = true }
ferrite-winit-wgpu-platform = { workspace = true }
profiling  = { workspace = true }
tracing = { workspace = true }
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json"] }
