[package]
name = "ferrite-runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash = { workspace = true }
anyhow = { workspace = true }
bitflags = { workspace = true }
boxcar = { workspace = true }
ferrite-geom = { workspace = true }
ferrite-style = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tui = { workspace = true }
